--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Uploaders: Roland Bauerschmidt <rb@debian.org>,
 Build-Depends: debhelper (>= 8.9.0~),
 	dpkg-dev (>= 1.16.1),
 	libdb5.1-dev, libgcrypt-dev,
- libgnutls-dev (>= 1.7), unixodbc-dev, libncurses5-dev, libperl-dev (>= 5.8.0),
+ libssl-dev (>= 1.0.1e-2), unixodbc-dev, libncurses5-dev, libperl-dev (>= 5.8.0),
  libsasl2-dev, libslp-dev, libltdl-dev | libltdl3-dev (>= 1.4.3),
  libwrap0-dev, perl, debconf-utils, po-debconf, quilt (>= 0.46-7),
  groff-base, time, heimdal-dev,
