--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,7 @@
 
 # Set this variable if you're building packages outside of Debian and don't
 # want the checks for DFSG-freeness.
-#DFSG_NONFREE = 1
+DFSG_NONFREE = 1
 
 export DEB_CFLAGS_MAINT_APPEND := -Wall -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE
 export DEB_BUILD_MAINT_OPTIONS := hardening=+pie,+bindnow
@@ -29,27 +29,6 @@ MAKEVARS	:= STRIP=
 VERSION = 2.4.28
 URL     = http://www.openldap.org/software/download/OpenLDAP/openldap-release/
 
-# Download the upstream source and make changes as required for DFSG reasons.
-# Assumes wget is available, as this is generally only used by the package
-# maintainers.
-get-orig-source:
-	@if [ ! -d "debian/schema" ] ; then \
-	    echo 'Run this from the top directory of the Debian source' >&2; \
-	    exit 1; \
-	fi
-	wget $(URL)/openldap-$(VERSION).tgz
-	tar xzf openldap-$(VERSION).tgz
-	rm -r openldap-$(VERSION)/doc/drafts
-	rm -r openldap-$(VERSION)/doc/rfc
-	set -e; for schema in debian/schema/*.schema debian/schema/*.ldif ; do \
-	    file=`basename "$$schema"`; \
-	    rm openldap-$(VERSION)/servers/slapd/schema/$$file; \
-	done
-	mv openldap-$(VERSION) openldap_$(VERSION).orig
-	tar cf openldap_$(VERSION).orig.tar openldap_$(VERSION).orig
-	rm -r openldap_$(VERSION).orig
-	gzip -9 openldap_$(VERSION).orig.tar
-
 %:
 	dh $@ --with quilt,autoreconf --builddirectory=$(builddir)
 
@@ -66,12 +45,6 @@ override_dh_auto_configure:
 	    then \
 		exit 1; \
 	    fi; \
-	fi
-
-	# Copy our stripped schema versions into where upstream expects them.
-	if [ -z "$(DFSG_NONFREE)" ]; then \
-		cp debian/schema/*.schema debian/schema/*.ldif \
-			servers/slapd/schema/; \
 	fi
 
 	dh_auto_configure -- $(CONFIG)
